@@ -1,5 +1,5 @@
 /* Creation of subprocesses, communicating via pipes.
-   Copyright (C) 2001-2004, 2006-2007 Free Software Foundation, Inc.
+   Copyright (C) 2001-2004, 2006-2008 Free Software Foundation, Inc.
    Written by Bruno Haible <haible@clisp.cons.org>, 2001.
 
    This program is free software: you can redistribute it and/or modify
@@ -51,10 +51,6 @@
 #  endif
 # endif
 
-#endif
-
-#if ! HAVE_ENVIRON_DECL
-extern char **environ;
 #endif
 
 #ifndef STDIN_FILENO
