@@ -1,3 +1,7 @@
+2008-02-26  Martin Lambers <marlam@marlam.de>
+
+	* gnulib/*: Update gnulib. Import havelib module.
+
 2008-01-20  Martin Lambers <marlam@marlam.de>
 
 	* gnulib/*: Add missing files.
